fix(admin): resolve compilation errors by reverting placeOrder to closePosition and fixing type casts